--- a/MobileGame/MobileGame.Android/MobileGame.Android.csproj
+++ b/MobileGame/MobileGame.Android/MobileGame.Android.csproj
@@ -101,5 +101,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\WhiteCar.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\LIFE.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
