Added SettingsPage and PlayResultPage

--- a/MobileGame/MobileGame/MobileGame.csproj
+++ b/MobileGame/MobileGame/MobileGame.csproj
@@ -31,5 +31,11 @@
     <EmbeddedResource Update="Views\PlayPageView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\PlayResultPageView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\SettingsPageView.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
